sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_depart_empty/errors.duarouter
Error: Attribute 'depart' in definition of vehicle '1' is empty.
Quitting (on error).
